force-app/main/default/objects/SCOC__LCRDataSource__c/SCOC__LCRDataSource__c.object-meta.xml
<CustomObject>
    <description>Liquid Credit Data Sources List</description>
    <label>LCRDataSource</label>
    <nameField>
        <displayFormat>LCRED-{00000}</displayFormat>
        <label>LiquidCredit Response Entity DataSource</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCRDataSources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>