force-app/main/default/objects/SCOC__LCRDataSource__c/fields/SCOC__CreditReportContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CreditReportContentVersionId__c</fullName>
    <description>The Credit Report Content ID associated to this record</description>
    <label>Credit Report Content Version ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>