force-app/main/default/objects/SCOC__LCRDataSource__c/fields/SCOC__IsIndividual__c.field-meta.xml
<CustomField>
    <fullName>SCOC__IsIndividual__c</fullName>
    <description>Indicates if this data source is for an individual or non-individual based on the record type assignment of this record.</description>
    <formula>$RecordType.Name == &quot;SBSS7 - Consumer&quot;</formula>
    <label>Is Individual</label>
    <type>Checkbox</type>
</CustomField>