force-app/main/default/objects/SCOC__LCRDataSource__c/fields/SCOC__LCREntity__c.field-meta.xml
<CustomField>
    <fullName>SCOC__LCREntity__c</fullName>
    <description>This required master-detail field contains the lookup key to the associated LiquidCredit Response Entity.</description>
    <label>LiquidCredit Response Entity</label>
    <referenceTo>SCOC__LCREntity__c</referenceTo>
    <relationshipLabel>LiquidCredit Response Entity Data Sources</relationshipLabel>
    <relationshipName>LCRDataSource</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>