force-app/main/default/objects/SCOC__LCRDataSource__c/fields/SCOC__noDataFlag__c.field-meta.xml
<CustomField>
    <fullName>SCOC__noDataFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No data flag.</description>
    <label>No Data Flag</label>
    <type>Checkbox</type>
</CustomField>