force-app/main/default/objects/SCOC__LCRDataSource__c/fields/SCOC__reportObtainedDate__c.field-meta.xml
<CustomField>
    <fullName>SCOC__reportObtainedDate__c</fullName>
    <description>Report Obtained Date.</description>
    <label>Report Obtained Date</label>
    <type>DateTime</type>
</CustomField>