force-app/main/default/objects/SCOC__LCRDataSource__c/fields/SCOC__requestStatus__c.field-meta.xml
<CustomField>
    <fullName>SCOC__requestStatus__c</fullName>
    <description>Request Status.</description>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>