force-app/main/default/objects/SCOC__LCRDataSource__c/fields/SCOC__rptSelectionId__c.field-meta.xml
<CustomField>
    <fullName>SCOC__rptSelectionId__c</fullName>
    <description>The rptSelectionId of the datasource data.</description>
    <label>rptSelectionId</label>
    <length>11</length>
    <type>Text</type>
</CustomField>