force-app/main/default/objects/SCOC__LCRDataSource__c/fields/SCOC__Version__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Version__c</fullName>
    <description>The version of the datasource data.</description>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3.12</fullName>
            </value>
            <value>
                <fullName>4.0</fullName>
            </value>
            <value>
                <fullName>5.0</fullName>
            </value>
            <value>
                <fullName>6.0</fullName>
            </value>
            <value>
                <fullName>7.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>