force-app/main/default/objects/SCOC__LCRDataSource__c/recordTypes/SCOC__SBSS7_Business.recordType-meta.xml
<RecordType>
    <fullName>SCOC__SBSS7_Business</fullName>
    <active>true</active>
    <description>Choose SBSS7 - Business if you want this record to represent a business entity.</description>
    <label>SBSS7 - Business</label>
</RecordType>